<resources>
    <string name="app_name">首選好食道</string>
    <string name="search1">搜尋</string>
    <string name="stars">評價</string>
    <string name="message" translatable="false">即時留言</string>

    //common_add_message
    <string name="member_message1" translatable="false">留言吧</string>
    <string name="message_point">留下你對這家餐廳的看法吧!除了跟其他人做交流外,也可以寫下對餐廳的意見,讓餐廳變更好喔~</string>
    <string name="message_feel" translatable="false">覺得這家餐廳如何?</string>
    <string name="message_good">十分不錯,會在來訪</string>
    <string name="message_soso">普普</string>
    <string name="member_message2" translatable="false">留言</string>
    <string name="message_verify">確認</string>
    <string name="message_cancel" translatable="false">取消</string>
    //common_opinion
    <string name="opinion1">意見回饋</string>
    <string name="note1">你可以透過本介面,向我們回報問題,提出功能建議,也可以提出一般性的建議與想法</string>
    <string name="name">姓        名</string>
    <string name="cellphone2">手        機</string>
    <string name="email">電子郵件</string>
    <string name="opinion2">意見回饋</string>
    <string name="note2">注意事項:請務必填寫e-mail,客服人員將透過信箱回覆給您</string>
    <string name="send">送出</string>
    //common_search
    <string name="area">地區</string>
    <string name="newtaipei">新北市</string>
    <string name="taipei">台北市</string>
    <string name="category">類別</string>
    <string name="american">美式餐聽</string>
    <string name="japan">日式料理</string>
    <string name="korea">韓式料理</string>
    <string name="hongkong">港式餐廳</string>
    <string name="italy">義式餐廳</string>
    <string name="chinese">中式餐廳</string>
    <string name="dessert">甜點</string>
    <string name="ice">冰品</string>
    <string name="restaurantsearch">搜尋</string>
    //common_search_info1
    <string name="restaurant_type">餐廳類型</string>
    <string name="area1">地區</string>
    <string name="adderss">地址</string>
    <string name="transport">公共運輸</string>
    <string name="telephone">電話</string>
    <string name="time">營業時間</string>
    <string name="sit">席位</string>
    <string name="remarks">備註</string>
    <string name="about">關於</string>
    //common_search_info2
    <string name="menu">菜單</string>
    <string name="popular_meal">人氣餐點</string>
    //common_search_info3 / manager_search_info3 / restaurant_message
    <string name="star">星數"</string>
    <string name="instant_message">即時留言</string>
    <string name="member_message4">留言</string>
    <string name="member_message_content">留言內容"</string>
    <string name="message_date">日期</string>
    <string name="message_delete">刪除</string>
    <string name="restaurant_star">平均星數"</string>
    <string name="restaurant_message_note">(所有會員星數平均後的值)</string>
    <string name="restaurant_member_message">會員即時留言</string>
    //common_search_info4
    <string name="hot_spot">景點</string>
    <string name="spot_address">地址</string>
    <string name="spot_time">營業時間</string>
    <string name="spot_telephone">電話</string>
    <string name="spot_distance">距離</string>
    //common_setting
    <string name="language">中/英文切換</string>
    <string name="character">字體大小切換</string>
    <string name="suggestion">意見回饋</string>
    //manager
    <string name="manager">管理者</string>
    <string name="audit">審核餐廳</string>
    <string name="recommed">推薦旅遊景點</string>
    <string name="advice">意見回饋</string>
    <string name="setting">設定</string>
    <string name="signout">登出</string>
    //manager_advice_card_view_row
    <string name="advice_account">帳號</string>
    <string name="advice_content">意見內容</string>
    //manager_audit_confirm
    <string name="audit_point1">確認是否實體店面,電話地址地區是否屬實,規定的照片是否都有</string>
    <string name="audit_time">申請時間</string>
    <string name="audit_resname">店名</string>
    <string name="audit_telephone">電話</string>
    <string name="audit_area">地區</string>
    <string name="audit_address">地址</string>
    <string name="audit_category">類別</string>
    <string name="audit_email">Email</string>
    <string name="audit_picture">店家照片</string>
    <string name="audit_point2">(需有店家招牌.店家門口照片.店內照片)</string>
    <string name="audit_ok">核准</string>
    <string name="audit_notok">不核准</string>
    //manager_audit_confirm_no
    <string name="audit_reason">不核准原因</string>
    <string name="audit_send">傳送</string>
    <string name="audit_cancel">取消</string>
    //manager_recommend_add/manager_recommend_modify
    <string name="recommend_place_add">新增推薦旅遊景點</string>
    <string name="recommend_place_update">更新推薦旅遊景點</string>
    <string name="recommend_complete">完成</string>
    <string name="recommend_name">景點名稱</string>
    <string name="recommend_address">地址</string>
    <string name="recommend_telephone">電話</string>
    <string name="recommend_distance">距離</string>
    <string name="recommend_time">營業時間</string>
    <string name="recommend_picture">景點圖片</string>
    //manager_recommend_card_view
    <string name="recommend_area">地區</string>
    <string name="recommend_category">類別</string>
    <string name="recommend_search">搜尋</string>
    //manager_recommend_content_card_view
    <string name="recommend_resname">店名</string>
    //member
    <string name="turntable">我幫你決定</string>
    <string name="promotions">優惠促銷</string>
    <string name="watchtherecord">觀看紀錄</string>
    <string name="myfavourite">我的最愛</string>
    <string name="member" translatable="false">會員</string>
    //member_promotions_card_view_row
    <string name="promotion_name">店名</string>
    <string name="promotion_content">優惠內容</string>
    <string name="promotion_dayline">優惠期限</string>
    //member_promotions_information
    <string name="promotion_to">到</string>
    <string name="promotion_note">此按鈕必須由餐廳店員點擊，若是自己點擊了，將無法得到優惠</string>
    <string name="promotion_take">領取</string>
    //restaurant
    <string name="restaurant">餐廳</string>
    <string name="information">更新餐廳資料</string>
    <string name="member_suggestion" translatable="false">會員回饋</string>
    <string name="delete">解除合作關係</string>
    //restaurant_add_promotions
    <string name="promotion_create">建立新的優惠促銷</string>
    <string name="promotion_rescontent">優惠促銷內容</string>
    <string name="promotion_point">(若沒有照片請以店家招牌為代表)</string>
    <string name="promotion_res_dayline">優惠期限</string>
    <string name="promotion_res_startday">開始日期</string>
    <string name="promotion_res_endday">結束日期</string>
    <string name="promotion_res_release">發佈</string>
    //restaurant_into
    <string name="res_into_create">建立更新餐廳介紹</string>
    <string name="res_into_complete">完成</string>
    <string name="res_into_point">(*為必填的資訊)</string>
    <string name="res_into_name">*店名</string>
    <string name="res_into_category">*類別</string>
    <string name="res_into_area">*地區</string>
    <string name="res_into_address">*地址</string>
    <string name="res_into_transpot">*公共運輸</string>
    <string name="res_into_telephone">*電話</string>
    <string name="res_into_time">*營業時間</string>
    <string name="res_into_sit">席 位</string>
    <string name="res_into_remarks">備 註</string>
    <string name="res_into_about">*關於</string>
    <string name="res_into_avatar">*餐廳頭像</string>
    <string name="res_into_menu">*菜單</string>
    <string name="res_into_note">(餐點名稱、價錢)</string>
    <string name="res_into_text">文字</string>
    <string name="res_into_picture">照片</string>
    <string name="res_into_popularity">*人氣餐點</string>
    <string name="res_into_mealpicture">*餐點照片(最多6張)</string>
    <string name="res_into_resimg">*餐廳內外部照片</string>
    <string name="res_into_outsideimg">外部(需有招牌照,最多3張)</string>
    <string name="res_into_insideimg">內部(最多3張)</string>
    //restaurant_promotions_card_view
    <string name="res_currently_promotions">目前有的優惠促銷</string>
    <string name="res_promotions_resname">店名</string>
    <string name="res_promotions_contenr">優惠內容</string>
    <string name="res_promotions_dayline">優惠期限</string>
    //visiter
    <string name="visiter">訪客</string>
    <string name="loginin">登入</string>
    <string name="search">餐廳搜尋</string>
    <string name="visiter_signup">註冊</string>
    //visiter_forgetpassword
    <string name="forgetpassword">忘記密碼</string>
    <string name="cellphone1">手機號碼</string>
    <string name="sendcode">傳送驗證碼</string>
    <string name="entercode">輸入驗證碼</string>
    <string name="authenticating">進行驗證</string>
    //visiter_login
    <string name="login_account">帳號</string>
    <string name="login_password">密碼</string>
    <string name="login_login">登入</string>
    <string name="login_connection_FB">連結Facebook</string>
    <string name="login_connection_Gmail">連結Gmail</string>
    <string name="login_signup">註冊</string>
    <string name="login_forgetpassword">忘記密碼</string>
    //visiter_member_register
    <string name="member_register">會員註冊</string>
    <string name="member_register_name">姓名</string>
    <string name="member_register_nickname">暱稱</string>
    <string name="member_register_account">帳號</string>
    <string name="member_register_password">密碼</string>
    <string name="member_register_confirm">確認密碼</string>
    <string name="member_register_birthday">生日</string>
    <string name="member_register_cellphone">電話</string>
    <string name="member_register_email">電子郵件</string>
    <string name="member_register_btn">註冊</string>
    //visiter_restaurant_register
    <string name="restaurant_register">餐廳註冊</string>
    <string name="restaurant_register_name">店名</string>
    <string name="restaurant_register_account">帳號</string>
    <string name="restaurant_register_password">密碼</string>
    <string name="restaurant_register_confirm">確認密碼</string>
    <string name="restaurant_register_telephone">電話</string>
    <string name="restaurant_register_area">地區</string>
    <string name="restaurant_register_address">地址</string>
    <string name="restaurant_register_category">類別</string>
    <string name="restaurant_register_email">Email</string>
    <string name="restaurant_register_pictures">店家照片</string>
    <string name="restaurant_register_note">(需有店家招牌,店家門口照片,店家內照片)</string>
    <string name="restaurant_register_btn">註冊</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="choose1">第一</string>
    <string name="choose2">第二</string>
    <string name="choose3">第三</string>
    <string name="choose4">第四</string>
    <string name="choose5">第五</string>
    <string name="choose6">第六</string>
    <string name="choose7">第七</string>
    <string name="choose8">第八</string>
    <string name="choose9">第九</string>
    <string name="choose10">第十</string>
    <string name="choose11">第十一</string>
    <string name="choose12">第十二</string>
    <string name="choose13">第十三</string>
    <string name="choose14">第十四</string>
    <string name="choose15">第十五</string>
    <string name="choose16">第十六</string>
    <string name="choose17">第十七</string>
    <string name="choose18">第十八</string>
    <string name="choose19">第十九</string>
    <string name="choose20">第二十</string>
    <string name="choose21">第二十一</string>
    <string name="choose22">第二十二</string>
    <string name="choose23">第二十三</string>
    <string name="choose24">第二十四</string>
    <string name="choose25">第二十五</string>
    <string name="choose26">第二十六</string>
    <string name="choose27">第二十七</string>
    <string name="choose28">第二十八</string>
    <string name="choose29">第二十九</string>
    <string name="choose30">第三十</string>
    <string name="ok">確定</string>

</resources>
