<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <Button
                style="?textContent"
                android:id="@+id/member"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/holo_orange_light"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/member" />

        </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            style="?textContent"
            android:id="@+id/memberSearch_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@android:drawable/ic_menu_search"
            android:gravity="fill"
            android:text="@string/search" />

        <Button
            style="?textContent"
            android:id="@+id/memberPromotions_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@android:drawable/ic_menu_recent_history"
            android:gravity="fill"
            android:text="@string/promotions" />

        <Button
            style="?textContent"
            android:id="@+id/turntable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@android:drawable/ic_menu_recent_history"
            android:gravity="fill"
            android:text="@string/turntable" />

        <Button
            style="?textContent"
            android:id="@+id/myfavourite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@android:drawable/btn_star_big_off"
            android:gravity="fill"
            android:text="@string/myfavourite" />

        <Button
            style="?textContent"
            android:id="@+id/watchtherecord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@android:drawable/ic_menu_recent_history"
            android:gravity="fill"
            android:text="@string/watchtherecord" />

        <Button
            style="?textContent"
            android:id="@+id/memberSetting_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@android:drawable/ic_menu_recent_history"
            android:gravity="fill"
            android:text="@string/setting"/>
    </LinearLayout>

    <Button
        style="?textContent"
        android:id="@+id/memberSignout_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorButtonNormal"
        android:text="@string/signout" />

</LinearLayout>