<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            style="?textContent"
            android:id="@+id/restaurant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/restaurant"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            style="?textContent"
            android:id="@+id/restaurantInformation_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@android:drawable/ic_menu_search"
            android:gravity="fill"
            android:text="@string/information" />

        <Button
            style="?textContent"
            android:id="@+id/restaurantPromotions_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@android:drawable/ic_menu_recent_history"
            android:gravity="fill"
            android:text="@string/promotions" />

        <Button
            style="?textContent"
            android:id="@+id/restaurantMessage_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@android:drawable/ic_menu_search"
            android:gravity="fill"
            android:text="@string/member_suggestion" />


        <Button
            style="?textContent"
            android:id="@+id/restaurantSetting_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@android:drawable/ic_menu_recent_history"
            android:gravity="fill"
            android:text="@string/setting"/>

        <Button
            style="?textContent"
            android:id="@+id/restaurantDelete_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@android:drawable/ic_menu_recent_history"
            android:gravity="fill"
            android:text="@string/delete"/>
    </LinearLayout>

    <Button
        style="?textContent"
        android:id="@+id/restaurantSignout_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorButtonNormal"
        android:text="@string/signout"/>

</LinearLayout>