<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                style="?textContent"
                android:id="@+id/manager"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/holo_orange_light"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/manager" />

        </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            style="?textContent"
            android:id="@+id/managerAudit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@android:drawable/ic_menu_recent_history"
            android:gravity="fill"
            android:text="@string/audit" />

        <Button
            style="?textContent"
            android:id="@+id/managerSearch_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@android:drawable/ic_menu_search"
            android:gravity="fill"
            android:text="@string/search" />

        <Button
            style="?textContent"
            android:id="@+id/manager_recommed_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@android:drawable/ic_menu_search"
            android:gravity="fill"
            android:text="@string/recommed" />

        <Button
            style="?textContent"
            android:id="@+id/managerAdvice_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@android:drawable/ic_menu_recent_history"
            android:gravity="fill"
            android:text="@string/advice"/>

        <Button
            style="?textContent"
            android:id="@+id/managerSetting_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@android:drawable/ic_menu_recent_history"
            android:gravity="fill"
            android:text="@string/setting" />

    </LinearLayout>

    <Button
        style="?textContent"
        android:id="@+id/managerSignout_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorButtonNormal"
        android:text="@string/signout" />

</LinearLayout>