<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.example.home.visiter.visiterAcitivity">

    <Button
        android:id="@+id/button10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Button"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:src="@mipmap/ic_launcher" />

    </LinearLayout>


    <TextView
        style="?textContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_account" />

    <EditText
        android:id="@+id/accountnumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        style="?textContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_password" />

    <EditText
        android:id="@+id/passwordnumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />

        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:orientation="horizontal">

            <Button
                style="?textContent"
                android:id="@+id/signin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/login_login" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            style="?textContent"
            android:id="@+id/connectfb"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:drawable/btn_default"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/login_connection_FB"
            android:textColor="#ffffff" />

    </LinearLayout>

    <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

            <Button
                style="?textContent"
                android:id="@+id/connectgmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:drawable/btn_default"
                android:backgroundTint="@android:color/holo_red_light"
                android:textColor="#ffffff"
                android:text="@string/login_connection_Gmail" />
        </LinearLayout>

            <Button
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Button"
                android:visibility="invisible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                style="?textContent"
                android:id="@+id/signup2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_signup" />
            <Button
                style="?textContent"
                android:id="@+id/forgetpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_forgetpassword"/>
        </LinearLayout>
</LinearLayout>